# cpp_starter_project

./: CMakeLists.txt  README.md  main.cpp
